--- a/documentacion.tex
+++ b/documentacion.tex
@@ -426,40 +426,47 @@ NOTA: Todo este proceso debe ser llevado a cabo como administrador. Usar \emph{s
 \section{Bit\'acora de trabajo}
 \subsection{Allan Rojas}
 \begin{itemize}
-  \item 29-09-2018:
+  \item 10-11-2018:
   \begin{itemize}
-    \item 3 horas – Buzzer Python
+    \item 4 horas - Investigar Windows Domain Controller.
   \end{itemize}
-  \item 29-09-2018:
+  \item 17-11-2018:
   \begin{itemize}
-    \item 4 horas – Database for Node Directory with MariaDB
+    \item 1 hora - Creaci\'on de Base Datos MySQL
   \end{itemize}
-  \item 30-09-2018:
+  \item 18-11-2018:
   \begin{itemize}
-    \item 4 horas – Java Audio Listening Programming
+    \item 4 horas - Creaci\'on de WebServer con WordPress
   \end{itemize}
-  \item 30-09-2018:
+  \item 19-11-2018:
   \begin{itemize}
-    \item 3 horas – Media Access to Raspberry
+    \item 2 horas - Creaci\'on de un File Server
   \end{itemize}
-  \item 01-10-2018:
+  \item 20-11-2018:
   \begin{itemize}
-    \item 5 horas – Mac Address Get / Add to Package
+    \item 2 horas - Investigar sobre PBX
+    \item 2 horas - Creacion de la PBX
+    \item 2 horas - Configuraci\'on de llamadas
   \end{itemize}
-  \item 10-10-2018:
+  \item 23-11-2018:
   \begin{itemize}
-    \item 6 horas – Package Generation and Onion Routing
+    \item 2 horas - Investigaci\'on sobre VPN
+    \item 2 horas - Configuraci\'on de VPN
   \end{itemize}
-  \item 19-10-2018:
+  \item 25-11-2018:
   \begin{itemize}
-    \item 4 horas – Scapy Implementation add to Buzzer
+    \item 4 horas - VPN
   \end{itemize}
-  \item 29-10-2018:
+  \item 26-11-2018:
   \begin{itemize}
-    \item 6 horas – Scapy Implementation add to Buzzer
+    \item 4 horas - DHCP
+  \end{itemize}
+  \item 27-11-2018:
+  \begin{itemize}
+    \item 4 horas - Documentaci\'on.
   \end{itemize}
 \end{itemize}
-Total de Horas Trabajadas : 35
+Total de horas trabajadas: 33 horas.
 
 \subsection{Sa\'ul Zamora}
 \begin{itemize}
@@ -521,7 +528,6 @@ Total de horas trabajadas: 37 horas.
 \section{Conclusiones}
 \begin{itemize}
   \item El uso de virtualizaci\'on es muy \'util en el desarrollo y configuraci\'on de servicios (al igual que el desarrollo de software en general) para la optimizaci\'on de recursos y para invisibilizar las diferencias de hardware en el sistema al usuario final.
-  \item 
 \end{itemize}
 
 \begin{thebibliography}{9}
@@ -540,6 +546,10 @@ Total de horas trabajadas: 37 horas.
   \bibitem{keypairs-ubuntu-mac}
   GitHub. (2018). naturalis/openstack-docs.
   [online] Available at: \url{https://github.com/naturalis/openstack-docs/wiki/Howto:-Creating-and-using-OpenStack-SSH-keypairs-on-Linux-and-OSX}
+
+  \bibitem{mysql-centos}
+  Rosehosting.com. (2018). \emph{How to Install MySQL on CentOS 7 | RoseHosting.}
+  [online] Available at: \url{https://www.rosehosting.com/blog/how-to-install-mysql-on-centos-7/}
 
   \bibitem{openstack-controller}
   Docs.openstack.org. (2018). \emph{OpenStack Docs: Install and configure the controller node for Red Hat Enterprise Linux and CentOS.}
